--- a/expenses-chart-component-main/index.html
+++ b/expenses-chart-component-main/index.html
@@ -4,28 +4,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
 
   <link rel="stylesheet" href="style.css">
+  <link rel="preload" href="/fonts/dm-sans-v11-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Expenses chart component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution {
       font-size: 11px;
       text-align: center;
+      margin-top: 1.25rem;
     }
-
+    
     .attribution a {
       color: hsl(228, 45%, 44%);
+    }
+    
+    .attribution a:hover,
+    .attribution a:focus {
+      text-decoration: none;
     }
   </style>
 </head>
 
 <body>
-  <div class="wrapper">
+  <main role="main">
     <div class="card bg-orange">
       <div>
         <div class="title">My balance</div>
@@ -35,56 +40,56 @@
     </div>
 
     <div class="card bg-white">
-      <h2>Spending - Last 7 days</h2>
+      <h1>Spending - Last 7 days</h1>
 
       <div class="chart">
-        <button data-day="mon">
+        <a data-day="mon">
           <div class="bar">
             <div class="info"></div>
           </div>
           <div class="day">mon</div>
-        </button>
-        <button data-day="tue">
+        </a>
+        <a data-day="tue">
           <div class="bar">
             <div class="info"></div>
           </div>
           <div class="day">tue</div>
-        </button>
-        <button data-day="wed">
+        </a>
+        <a data-day="wed">
           <div class="bar">
             <div class="info"></div>
           </div>
           <div class="day">wed</div>
-        </button>
-        <button data-day="thu">
+        </a>
+        <a data-day="thu">
           <div class="bar">
             <div class="info"></div>
           </div>
           <div class="day">thu</div>
-        </button>
-        <button data-day="fri">
+        </a>
+        <a data-day="fri">
           <div class="bar">
             <div class="info"></div>
           </div>
           <div class="day">fri</div>
-        </button>
-        <button data-day="sat">
+        </a>
+        <a data-day="sat">
           <div class="bar">
             <div class="info"></div>
           </div>
           <div class="day">sat</div>
-        </button>
-        <button data-day="sun">
+        </a>
+        <a data-day="sun">
           <div class="bar">
             <div class="info"></div>
           </div>
           <div class="day">sun</div>
-        </button>
+        </a>
       </div>
 
       <hr>
 
-      <footer>
+      <div class="total-diff">
         <div>
           <div class="title">Total this month</div>
           <h2 class="total">$478.33</h2>
@@ -94,15 +99,15 @@
           <div class="diffrence">+2.4%</div>
           <div class="title">from last month</div>
         </div>
-      </footer>
+      </div>
 
     </div>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://github.com/meelix">Meelix</a>.
-    </div>
-  </div>
+    </footer>
+  </main>
 
   <script defer src="data.js"></script>
 </body>
