remove unnecessary attribute

--- a/expenses-chart-component-main/index.html
+++ b/expenses-chart-component-main/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-  <main role="main">
+  <main>
     <div class="card bg-orange">
       <div>
         <div class="title">My balance</div>
